@startuml
package Message{

    interface IMessage{
        +registe(messageRegister: IMessageRegister,options?: MessageOptions): Promise<SendMessageToClient>;
        +send(messageRegister: IMessageRegister,options?:MessageOptions): Promise<void>;
        +get(message_id: string): Promise<IMessageEditor>;
    }

    interface IMessageRegister{
        +registe(): Promise<string>;
    }

    interface IMessageEditor{
        +message_id: string;
        +message: string;
        +user: IUserEditor;
        +room_id: string;
        +options?: Options;
        +created_at: Datetime;
        +edit(message: string): Promise<boolean>;
        +isEditable(message: IMessageEditor): Promise<boolean>;
        +delete(): Promise<boolean>;
    }

    abstract class Message{
        #messageEventEmitter: MessageEventEmitter;
        #repository: IMessageRepository;
        #MAX_MESSAGE_COUNT

        #registe(messageRegister: IMessageRegister,options?: MessageOptions): Promise<SendMessageToClient>;
        send(messageRegister: IMessageRegister,options?: MessageOptions): Promise<void>; (抽象メソッド)
        get(message_id: string): Promise<IMessageEditor>;
        delete(): void (未実装)
        edit(): void : (未実装)
        typing(user,room_id): void;
        latest(room_id: string): Promise<void>;
        more(room_id: string,message_id: string): Promise<void>;
    }

    class UserMessage{
        send(messageRegister: IMessageRegister,options?: MessageOptions);
    }

    class SystemMessage{
        send(messageRegister: IMessageRegister,options?: MessageOptions);
    }

    class Service{
        toClient(messages: IMessageEditor[]): SendMessageToClient[]
    }

    IMessage <|.. Message
    IMessageRegister <.. IMessage
    IMessageEditor <.. IMessage
    Message <|-- UserMessage
    Message <|-- SystemMessage




    
}


@enduml